# diagrams-input

./: .gitignore  CHANGELOG.md  LICENSE  README.md  diagrams-input.cabal  svg-diagrams.cabal  test.hs
.github/workflows/: haskell-ci.yml
Diagrams/SVG/: Arguments.hs  Attributes.hs  Path.hs  ReadSVG.hs  ReadSVG.hs~  Tree.hs
Test/: Main.hs  TestAll.hs
src/Diagrams/SVG/: Arguments.hs  Attributes.hs  Attributes.hs~  Fonts.hs  Path.hs  Path.hs~  ReadSVG.hs  Tree.hs
src/Diagrams/SVG/Fonts/: CharReference.hs  Fonts.hs  ReadFont.hs  Text.hs  WriteFont.hs
src/Diagrams/TwoD/: Image.hs  Input.hs
src/Text/XML/Stream/: Parse.hs
