Name:                diagrams-input
Version:             0.1
Synopsis:            Parse svg files for diagrams
Description:         Parse svg files for the diagrams DSL using xml-conduits.
License:             BSD3
License-file:        LICENSE
Author:              Tillmann Vogt
Maintainer:          diagrams-discuss@googlegroups.com
Copyright:           Tillmann Vogt (2014)
Category:            Graphics, Diagrams
Build-type:          Simple
Cabal-version:       >=1.10

Library
  Exposed-modules:    Diagrams.SVG.ReadSVG
                      Diagrams.SVG.Attributes
                      Diagrams.SVG.Path
                      Diagrams.SVG.Tree
                      Diagrams.SVG.Arguments
                      Diagrams.TwoD.Input
                      Text.XML.Stream.Parse
                      Text.XML.Stream.Token
  Build-depends:      attoparsec >= 0.10
                    , base == 4.*
                    , base64-bytestring
                    , bytestring
                    , colour
                    , conduit
                    , containers
                    , css-text
                    , diagrams-core >= 1.3 && < 1.4
                    , diagrams-lib >= 1.3 && < 1.4
                    , digits
                    , either
                    , JuicyPixels >= 3.1.5 && < 3.3
                    , linear >= 1.11.3 && < 1.19
                    , resourcet
                    , semigroups
                    , split
                    , system-filepath
                    , text >= 0.11
                    , transformers
                    , unordered-containers
                    , xml-types == 0.3.*
                    , blaze-builder
                    , blaze-markup
                    , conduit-extra
                    , data-default
  Hs-source-dirs:     src
  default-language:   Haskell2010
