Name:                diagrams-input
Version:             0.1
Synopsis:            Parse svg files for diagrams
Description:         Parse svg files for the diagrams DSL using xml-conduits.
License:             BSD3
License-file:        LICENSE
Author:              Tillmann Vogt
Maintainer:          diagrams-discuss@googlegroups.com
Copyright:           Tillmann Vogt (2014)
Category:            Graphics, Diagrams
Build-type:          Simple
Cabal-version:       >=1.10

Library
  Exposed-modules:    Diagrams.TwoD.Input
                      Diagrams.SVG.ReadSVG
                      Diagrams.SVG.Arguments
                      Diagrams.SVG.Attributes
                      Diagrams.SVG.Path
                      Diagrams.SVG.Tree
  Other-modules:      Diagrams.SVG.Fonts.CharReference
                      Diagrams.SVG.Fonts.ReadFont
  Build-depends:      attoparsec >= 0.10
                    , base == 4.*
                    , base64-bytestring
                    , blaze-builder
                    , blaze-markup
                    , bytestring
                    , colour
                    , conduit
                    , conduit-extra
                    , containers
                    , css-text
                    , data-default
                    , diagrams-core >= 1.3 && < 1.4
                    , diagrams-lib >= 1.3 && < 1.4
                    , digits
                    , either
                    , JuicyPixels >= 3.1.5 && < 3.3
                    , linear >= 1.11.3
                    , resourcet
                    , semigroups
                    , split
                    , system-filepath
                    , text >= 0.11
                    , transformers
                    , unordered-containers
                    , vector
                    , xml-conduit >= 1.3.1
                    , xml-types == 0.3.*
  Hs-source-dirs:     src
  default-language:   Haskell2010
